# websocket-chat

./: Makefile  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  app.py
client/: pyproject.toml
client/client_app/: main.py
tests/: conftest.py  test_app.py
