[tool.poetry]
name = "websocket CLI client"
version = "0.1.0"
description = ""
authors = ["Alex Tyshkevich <alex@tyshkevich.ru"]
readme = "README.md"

[tool.poetry.scripts]
websocket_cli = "client_app.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.3.2"}
websocket = "^0.2.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
